--- a/main.css
+++ b/main.css
@@ -27,12 +27,13 @@ body{
     color:#ff9900;
 }
 h1{
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
 }
 p{
     font-size: 15px;
     padding-right:60px;
+    
 }
 a:visited {
     color: #33ccff;
@@ -48,7 +49,7 @@ a:active{
 
     float:left;
     background-color:white;
-    opacity: 0.75;
+    opacity: 0.95;
     position:fixed;
 
     text-align: center ;
@@ -59,6 +60,7 @@ a:active{
     padding-right: 20px;
     padding-top:10px;
     padding-bottom:10px;
+    z-index:99999;
 }
 #home_header{
     color:#33ccff;
@@ -78,11 +80,12 @@ a:active{
 }
 .navigation{
     width:25%;
+    margin-top:10px;
 }
 .pics{
     margin-top:100px;
-    width: 80%;
-    margin-left:18%;
+    width: 48%;
+    margin-left:26%;
   
 }
 #image1,#image2,#image3{
@@ -109,10 +112,49 @@ a:active{
     
     margin:0px 20px 40px 20px;
 }
-.center{
+
+
+/* content of body start */
+.content{
+    
+    margin:40px 10% 40px 10%;
+    background-color: white;
+    opacity:0.75;
+    text-align:left;
+    min-width: 80%;
+    padding: 20px;
+    float:left;
+    min-height:600px;
+    z-index: 99990;
+}
+.subtitle,.subtitle-right{
+    font-weight: bold;
+    font-size:20px;
+    opacity:1;
+    padding-bottom: 15px;
+    padding-left: 10px;
+    z-index: 99991;
+}
+.paragraph{
+    font-size:16px;
+    font-family: sans-serif;
+    padding-left: 10px;
+    z-index: 99991;
     
 }
-
+#left-column{
+    float:inherit;
+    width:51%;
+    margin-right:9%;
+}
+right-column{
+    float:inherit;
+    width:40%;
+}
+subtitle-right{
+    font-size:18px;
+}
+/* */
 
 
 
@@ -122,14 +164,16 @@ a:active{
 
 
 footer{
-    position:absolute;
+    float:left;
+    text-align:center;
+    width:100%;
+    margin-bottom: 0px;
     bottom:-10px;
     background-color:white;
     opacity:0.8;
-    margin-left: -8px;
-    margin-right: -8px;
-    font-color:inherit;
-    padding:10px 0px 10px 0px;
+    margin-left:-8px;
+    color:inherit;
+    padding:10px 8px 10px 8px;
 
 }
 #footer{
